fix original author url

--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -338,7 +338,7 @@
       <a href="https://www.fhb.gov.hk/download/opendata/COVID19/vaccination-rates-over-time-by-age.csv">data.gov.hk</a>
     </p>
     <p>
-      Plots/analysis by Arthur Liu based on work done by <a href="https://chrisjbillington.net/COVID">Chris Billington</a>.
+      Plots/analysis by Arthur Liu based on work done by <a href="https://chrisbillington.net/COVID">Chris Billington</a>.
     </p>
     <p>
       Python script for producing the plots can be found at <a href="https://github.com/arthurhsliu/covidhk/hkg.py">GitHub</a>.
