Updated original author information

--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -27,10 +27,10 @@
     <h1>
       Progression of the COVID outbreak in the HKSAR
     </h1>
-    Last updated: 2022-02-06 15:19 Hong Kong time
+    Last updated: 2022-02-06 16:24 Hong Kong time
     <br>
     <small>
-      Updates daily near 12pm HKT
+      Updates daily around 6am HKT
     </small>
     <br>
     <br>
@@ -51,9 +51,9 @@
       due to the omicron variant. 
     </p>
     <p>
-      How have restrictions in the HKG affected the spread of the virus? The below plot
+      How have restrictions in the HKSAR affected the spread of the virus? The below plot
       shows how the effective reproduction number of the virus, <i>R</i><sub>eff</sub>
-      has changed over time in the HKG, as well as how the daily cases have changed over
+      has changed over time in the HKSAR, as well as how the daily cases have changed over
       time. An exponential trendline shows the approximate trajectory daily case numbers
       would follow, were the reproduction number of the virus to remain at its current
       level.
