--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -27,7 +27,7 @@
     <h1>
       Progression of the COVID outbreak in the HKSAR
     </h1>
-    Last updated: 2022-02-06 16:24 Hong Kong time
+    Last updated: 2022-02-06 17:20 Hong Kong time
     <br>
     <small>
       Updates daily around 6am HKT
@@ -331,11 +331,11 @@
 
     <p>
       Source for case numbers:
-      <a href="http://www.chp.gov.hk/files/misc/latest_situation_of_reported_cases_covid_19_eng.csv">data.gov.hk</a>
+      <a href="http://www.chp.gov.hk/files/misc/latest_situation_of_reported_cases_covid_19_eng.csv">www.chp.gov.hk</a> via <a href="https://data.gov.hk/en-data/dataset/hk-dh-chpsebcddr-novel-infectious-agent">data.gov.hk</a>
     </p>
     <p>
       Source for vaccination data:
-      <a href="https://www.fhb.gov.hk/download/opendata/COVID19/vaccination-rates-over-time-by-age.csv">data.gov.hk</a>
+      <a href="https://www.fhb.gov.hk/download/opendata/COVID19/vaccination-rates-over-time-by-age.csv">www.fhb.gov.hk</a> via <a href="https://data.gov.hk/en-data/dataset/hk-fhb-fhbcovid19-vaccination-rates-over-time-by-age">data.gov.hk</a>
     </p>
     <p>
       Plots/analysis by Arthur Liu based on work done by <a href="https://chrisbillington.net/COVID">Chris Billington</a>.
