--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -2,15 +2,14 @@
 <META HTTP-EQUIV="EXPIRES" CONTENT="0">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<!--  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162432647-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGVMG3KGB0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
-    gtag('config', 'UA-162432647-1');
+  
+    gtag('config', 'G-ZGVMG3KGB0');
   </script>
--->
 
   <meta charset="UTF-8">
   <meta property="og:type" content="website" />
@@ -27,7 +26,7 @@
     <h1>
       Progression of the COVID outbreak in the HKSAR
     </h1>
-    Last updated: 2022-02-06 22:48 Hong Kong time
+    Last updated: 2022-02-06 23:13 Hong Kong time
     <br>
     <small>
       Updates daily around 6am HKT
@@ -47,8 +46,8 @@
     <h3 id="all"><i>R</i><sub>eff</sub> estimate from all cases</h3>
 
     <p>
-      The HKSAR is currently experiencing an outbreak of COVID,
-      due to the omicron variant. 
+      The HKSAR is currently experiencing a COVID outbreak,
+      due to Delta and Omicron variants.
     </p>
     <p>
       How have restrictions in the HKSAR affected the spread of the virus? The below plot
@@ -92,7 +91,7 @@
       This type of model is very simplistic, and should be taken with a grain of salt.
       The number of actual cases detected will depend strongly on what fraction of
       infections come forward for testing, which may change over time. Furthermore, this
-      model treats the entire territory as homogenous, whereas in reality some
+      model treats the entire territory as homogeneous, whereas in reality some
       geographic areas or social networks will develop high immunity and thus slower
       growth before others. This can significantly affect the overall rate of spread,
       but is not captured in a simple model such as this.
@@ -280,7 +279,7 @@
     increased by the number of new recoveries.
   </p>
   <p>
-    The number of new infections each day is drawn from a Poission distribution with mean
+    The number of new infections each day is drawn from a Poisson distribution with mean
     equal to <i>i</i>(<i>t</i>) <i>R</i><sub>eff</sub>(<i>t</i>) / 𝜏.
   </p>
   <p>
@@ -302,7 +301,7 @@
   <p>
     where <i>μ</i> = 10.5 days, <i>σ</i> = 3.5 days, and ∗ is the convolution
     operation. This causes the effect of a vaccine dose to over the course of the
-    second week after it is adminsitered, reaching nearly full effectiveness
+    second week after it is administered, reaching nearly full effectiveness
     approximately two weeks after administration.
   </p>
   <p>
@@ -341,7 +340,7 @@
       Plots/analysis by Arthur Liu based on work done by <a href="https://chrisbillington.net/COVID">Chris Billington</a>.
     </p>
     <p>
-      Python script for producing the plots can be found at <a href="https://github.com/arthurhsliu/covidhk/hkg.py">GitHub</a>.
+      Python scripts for producing the plots can be found at <a href="https://github.com/arthurhsliu/covidhk/">GitHub</a>.
     </p>
   </div>
 </body>
