--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <meta property="og:type" content="website" />
   <meta property="og:image" content="http://localhost/COVID_HKG.png">
-  <meta property="og:title" content="Progression of the COVID outbreak in the HKSAR"/>
+  <meta property="og:title" content="Progression and Projection of the COVID outbreak in the HKSAR"/>
   <meta property="og:description" content="Plot of cases and estimated R_eff for the COVID outbreak in the HKSAR"/>
   <meta property="og:url" content="http://localhost/COVID_HKG.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,13 +24,20 @@
   <div class="content">
 
     <h1>
-      Progression of the COVID outbreak in the HKSAR
+      Progression and Projection of the COVID outbreak in the HKSAR
     </h1>
-    Last updated: 2022-02-06 23:13 Hong Kong time
+    Last updated: 2022-02-07 09:11 Hong Kong time
     <br>
     <small>
       Updates daily around 6am HKT
     </small>
+
+    <h2>
+      DISCLAIMER
+    </h2>
+    <p>
+      The information on this page uses data from the HKSAR Government and any prediction/projections are purely speculative.
+      The author of the page provides no warranty whatsoever to the correctness and accuracy of the information presented below.
     <br>
     <br>
     <div id="toc_container">
