--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -13,10 +13,10 @@
 
   <meta charset="UTF-8">
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="http://localhost/COVID_HKG.png">
+  <meta property="og:image" content="http://arthurhsliu.github.io/covidhk/COVID_HKG.png">
   <meta property="og:title" content="Progression and Projection of the COVID outbreak in the HKSAR"/>
   <meta property="og:description" content="Plot of cases and estimated R_eff for the COVID outbreak in the HKSAR"/>
-  <meta property="og:url" content="http://localhost/COVID_HKG.html">
+  <meta property="og:url" content="http://arthurhsliu.github.io/covidhk/COVID_HKG.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -29,7 +29,7 @@
     Last updated: 2022-02-07 09:11 Hong Kong time
     <br>
     <small>
-      Updates daily around 6am HKT
+      Updates daily around 6pm HKT
     </small>
 
     <h2>
@@ -44,7 +44,6 @@
       <p class="toc_title">Contents</p>
       <li><a href="#all"><i>R</i><sub>eff</sub> estimate from all cases</a></li>
       <li><a href="#sir">SIR model projection</a></li>
-      <li><a href="#animated">Animated projections over time</a></li>
       <li><a href="#disclaimer">Disclaimer on trends</a></li>
       <li><a href="#methodology">Methodology</a></li>
       <li><a href="#details">Data sources and contact</a></li>
