--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -26,7 +26,7 @@
     <h1>
       Progression and Projection of the COVID outbreak in the HKSAR
     </h1>
-    Last updated: 2022-02-10 17:00 Hong Kong time
+    Last updated: 2022-02-11 15:55 Hong Kong time
     <br>
     <small>
       Updates daily around 6pm HKT
@@ -337,6 +337,8 @@
     <p>
       Source for case numbers:
       <a href="http://www.chp.gov.hk/files/misc/latest_situation_of_reported_cases_covid_19_eng.csv">www.chp.gov.hk</a> via <a href="https://data.gov.hk/en-data/dataset/hk-dh-chpsebcddr-novel-infectious-agent">data.gov.hk</a>
+      <a href="https://www.info.gov.hk/gia/general/today.htm">Daily CHP Press Releases</a>
+      <a href="https://webcast.info.gov.hk/revamp/eng/livecast.html">Daily CHP Press Conferences</a>
     </p>
     <p>
       Source for vaccination data:
