--- a/covidhk/COVID_HKG.html
+++ b/covidhk/COVID_HKG.html
@@ -26,7 +26,7 @@
     <h1>
       Progression and Projection of the COVID outbreak in the HKSAR
     </h1>
-    Last updated: 2022-03-08 16:52 Hong Kong time
+    Last updated: 2022-03-09 18:00 Hong Kong time
     <br>
     <small>
       Updates daily around 6pm HKT
@@ -53,7 +53,7 @@
 
     <p>
       The HKSAR is currently experiencing a COVID outbreak,
-      due to Delta and Omicron variants.
+      due to the Omicron variant.
     </p>
     <p>
       How have restrictions in the HKSAR affected the spread of the virus? The below plot
@@ -322,15 +322,13 @@
     where <i>d</i>(<i>t</i><sub><i>i</i></sub>) is the cumulative number of doses per
     capita on each day.
   </p>
-<!--  <p>
+  <p>
     As of Dec 2021, these vaccine assumptions are not particularly relevant to the
     projections, as the 1st and 2nd dose rollouts are mostly complete, and omicron
     likely escapes most vaccine-induced immunity against infection in any case. I am not
     yet including a modelled effect of 3rd doses, but may do so if the omicron waves
-    last long enough for it to plausibly make a difference to spread, or if 3rd doses
-    are brought forward in time.
+    last long enough for it to plausibly make a difference to spread.
   </p>
- -->
 
     <h3 id="details">Data sources and contact</h3>
 
